User > check role == null, add JSonProperty annotations